--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
       <!-- Campo para el correo electrónico -->
         <h2>Iniciar Sesión</h2>
-        <label for="correo">Correo Electrónico:</label>
+<label for="correo">Correo Electrónico:</label>
 <input type="email" id="correo" name="correo" placeholder="Ingresa tu correo" required>
+
+   <!-- Campo para la contraseña -->
+<label for="contrasena">Contraseña:</label>
+<input type="password" id="contrasena" name="contrasena" placeholder="Ingresa tu contraseña" required>
+
 
 
 
