se añadios los inputos y h2 dentro de un Div y en un Form

--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <title>Login</title>
 </head>
 <body>
-      <!-- Campo para el correo electrónico -->
+     
+    <div class="contenedor-login">
         <h2>Iniciar Sesión</h2>
-<label for="correo">Correo Electrónico:</label>
-<input type="email" id="correo" name="correo" placeholder="Ingresa tu correo" required>
+        <form id="formulario-login">
+            <!-- Campo para el correo electrónico -->
+            <label for="correo">Correo Electrónico:</label>
+            <input type="email" id="correo" name="correo" placeholder="Ingresa tu correo" required>
 
-   <!-- Campo para la contraseña -->
-<label for="contrasena">Contraseña:</label>
-<input type="password" id="contrasena" name="contrasena" placeholder="Ingresa tu contraseña" required>
+            <!-- Campo para la contraseña -->
+            <label for="contrasena">Contraseña:</label>
+            <input type="password" id="contrasena" name="contrasena" placeholder="Ingresa tu contraseña" required>
 
-<!-- Botón para iniciar sesión -->
-<button type="submit">Iniciar Sesión</button>
-
+            <!-- Botón para iniciar sesión -->
+            <button type="submit">Iniciar Sesión</button>
+        </form>
+    </div>
 
 
 </body>
